--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,9 @@
             "http://*/*",
             "https://*/*"
         ],
+        "exclude_matches": [
+            "https://mail.google.com/*"
+        ],
         "js": ["scroll.js"]
     }
     ]
