--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,16 @@
 {
-    "manifest_version": 2,
-    "name": "Sequence Scroller",
-    "version": "0",
-    "content_scripts": [
+  "manifest_version": 2,
+  "name": "Sequence Scroller",
+  "version": "0",
+  "background": {
+    "page": "extension.html",
+    "persistent": false
+  },
+  "content_scripts": [
     {
-        "matches": [
-            "http://*/*",
-            "https://*/*"
-        ],
-        "exclude_matches": [
-            "https://mail.google.com/*"
-        ],
-        "js": ["scroll.js"]
+      "matches": ["http://*/*", "https://*/*"],
+      "js": ["scroll.js"]
     }
-    ]
+  ],
+  "permissions": ["storage"]
 }
