--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,23 @@
 {
   "manifest_version": 2,
   "name": "Sequence Scroller",
-  "version": "0",
+  "version": "1",
   "background": {
     "page": "background.html",
     "persistent": false
   },
   "content_scripts": [
     {
-      "matches": ["http://*/*", "https://*/*"],
-      "js": ["content.js"]
+      "matches": [
+        "http://*/*",
+        "https://*/*"
+      ],
+      "js": [
+        "content.js"
+      ]
     }
   ],
-  "permissions": ["storage"]
+  "permissions": [
+    "storage"
+  ]
 }
